--- a/app/src/main/res/layout/activity_start__page.xml
+++ b/app/src/main/res/layout/activity_start__page.xml
@@ -16,7 +16,7 @@
         android:layout_marginBottom="2dp"
         android:fontFamily="@font/bolt_regular"
         android:gravity="center"
-        android:text="Welcome to 525 Crescendo Scouting"
+        android:text="Welcome to 525 Reefscape Scouting"
         android:textColor="#000000"
         android:textSize="50sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
