--- a/app/src/main/res/layout/content_data__collection__page_1.xml
+++ b/app/src/main/res/layout/content_data__collection__page_1.xml
@@ -14,14 +14,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/bolt_regular"
-        android:text="General Questions"
+        android:text="Auto"
         android:textColor="#000"
         android:textSize="55sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.013" />
+        app:layout_constraintVertical_bias="0.023" />
 
     <Button
         android:id="@+id/genCancel_B"
@@ -36,80 +36,137 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.986" />
 
-    <EditText
-        android:id="@+id/genTeamNum_TXT"
-        android:layout_width="280dp"
-        android:layout_height="64dp"
-        android:ems="10"
-        android:hint="@string/team"
-        android:importantForAutofill="no"
-        android:inputType="number"
-        android:textColor="#000"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.163"
-        app:layout_constraintStart_toEndOf="@+id/genTeamNum_TV"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.09" />
-
-    <TextView
-        android:id="@+id/genAutoCode_TV"
-        android:layout_width="362dp"
-        android:layout_height="84dp"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="@font/bolt_regular"
-        android:foregroundGravity="center_horizontal"
-        android:text="# of Auto Codes:"
-        android:textColor="#000"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.141"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.19" />
-
 
     <TextView
         android:id="@+id/genPlace_TV"
-        android:layout_width="818dp"
-        android:layout_height="89dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bolt_regular"
         android:foregroundGravity="center_horizontal"
-        android:text="Where Can You Place Coral in Auto?"
+        android:text="Where can you place coral in Auto?"
         android:textAlignment="center"
-        android:textColor="#000"
-        android:textSize="50sp"
+        android:textColor="#343434"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.554"
+        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.28" />
+        app:layout_constraintVertical_bias="0.293" />
+
+    <ImageView
+        android:id="@+id/genReefImage_IV"
+        android:layout_width="wrap_content"
+        android:layout_height="421dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.43"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.488"
+        app:srcCompat="@drawable/reef_removebg_preview__1_" />
+
+    <CheckBox
+        android:id="@+id/genAutoPlaceL2_CB"
+        android:layout_width="119dp"
+        android:layout_height="66dp"
+        android:text="L2"
+        android:textSize="44sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.665"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.541" />
+
+    <CheckBox
+        android:id="@+id/genAutoPlaceL4_CB"
+        android:layout_width="119dp"
+        android:layout_height="71dp"
+        android:text="L4"
+        android:textSize="44sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.665"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.377" />
+
+    <CheckBox
+        android:id="@+id/genAutoPlaceL1_CB"
+        android:layout_width="119dp"
+        android:layout_height="66dp"
+        android:text="L1"
+        android:textSize="44sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.665"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.624" />
+
+    <CheckBox
+        android:id="@+id/genAutoPlaceL3_CB"
+        android:layout_width="119dp"
+        android:layout_height="66dp"
+        android:text="L3"
+        android:textSize="44sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.665"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.457" />
 
     <TextView
         android:id="@+id/genAutoPickup_TV"
-        android:layout_width="698dp"
-        android:layout_height="114dp"
+        android:layout_width="686dp"
+        android:layout_height="101dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bolt_regular"
         android:foregroundGravity="center_horizontal"
-        android:text="Can you Pick Up coral In Auto, If So Where?"
+        android:text="Can you pick up coral In Auto? If so, where?"
         android:textAlignment="center"
-        android:textColor="#000"
-        android:textSize="50sp"
-        android:textStyle="bold"
+        android:textColor="#343434"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.524"
+        app:layout_constraintHorizontal_bias="0.519"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.639" />
+        app:layout_constraintVertical_bias="0.75" />
+
+    <CheckBox
+        android:id="@+id/genPickupRight_CB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Right Station"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.72"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.813" />
+
+    <CheckBox
+        android:id="@+id/genPickupLeft_CB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Left Station"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.283"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.813" />
 
     <Button
         android:id="@+id/genNextPage_B"
-        android:layout_width="454dp"
-        android:layout_height="101dp"
+        android:layout_width="403dp"
+        android:layout_height="124dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/bolt_regular"
@@ -117,10 +174,11 @@
         android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.751"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/genCancel_B"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.968" />
+        app:layout_constraintVertical_bias="0.96" />
 
     <android.support.constraint.Barrier
         android:id="@+id/barrier4"
@@ -150,15 +208,16 @@
         android:id="@+id/genTeamNum_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
         android:fontFamily="@font/bolt_regular"
         android:text="@string/team_number"
         android:textColor="#000"
-        android:textSize="45sp"
-        app:layout_constraintBottom_toTopOf="@+id/genAutoCode_TV"
+        android:textSize="44sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.231"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.639" />
+        app:layout_constraintVertical_bias="0.105" />
 
     <android.support.design.widget.TextInputEditText
         android:id="@+id/genAutoCodes_TXT"
@@ -168,100 +227,57 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.23"
+        app:layout_constraintHorizontal_bias="0.248"
         app:layout_constraintStart_toEndOf="@+id/genAutoCode_TV"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.193" />
+        app:layout_constraintVertical_bias="0.178" />
 
-    <RadioGroup
-        android:id="@+id/Gen_PickupGroup_RG"
-        android:layout_width="662dp"
-        android:layout_height="200dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/genQuestions_TV"
-        app:layout_constraintVertical_bias="0.812">
-
-        <CheckBox
-            android:id="@+id/genPickupLeft_CB"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Left Station"
-            android:textSize="60sp" />
-
-        <CheckBox
-            android:id="@+id/genPickupRight_CB"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Right Station"
-            android:textSize="60sp" />
-
-    </RadioGroup>
-
-    <ImageView
-        android:id="@+id/genReefImage_IV"
-        android:layout_width="157dp"
-        android:layout_height="317dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.415"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.411"
-        app:srcCompat="@drawable/reef_removebg_preview__1_" />
-
-    <CheckBox
-        android:id="@+id/genAutoPlaceL1_CB"
-        android:layout_width="119dp"
-        android:layout_height="66dp"
-        android:text="L1"
+    <TextView
+        android:id="@+id/genAutoCode_TV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bolt_regular"
+        android:foregroundGravity="center_horizontal"
+        android:text="# of Auto Codes:"
+        android:textColor="#000"
         android:textSize="44sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.605"
+        app:layout_constraintHorizontal_bias="0.173"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="0.189" />
 
-    <CheckBox
-        android:id="@+id/genAutoPlaceL4_CB"
-        android:layout_width="119dp"
-        android:layout_height="71dp"
-        android:text="L4"
-        android:textSize="44sp"
+    <EditText
+        android:id="@+id/genTeamNum_TXT"
+        android:layout_width="253dp"
+        android:layout_height="68dp"
+        android:ems="10"
+        android:hint="@string/team"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:textColor="#000"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.605"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.232"
+        app:layout_constraintStart_toEndOf="@+id/genTeamNum_TV"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.358" />
+        app:layout_constraintVertical_bias="0.096" />
 
-    <CheckBox
-        android:id="@+id/genAutoPlaceL2_CB"
-        android:layout_width="119dp"
-        android:layout_height="66dp"
-        android:text="L2"
-        android:textSize="44sp"
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="736dp"
+        android:layout_height="4dp"
+        android:background="#000000"
+        android:foregroundTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.605"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.478" />
-
-    <CheckBox
-        android:id="@+id/genAutoPlaceL3_CB"
-        android:layout_width="119dp"
-        android:layout_height="66dp"
-        android:text="L3"
-        android:textSize="44sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.605"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.416" />
+        app:layout_constraintVertical_bias="0.256" />
 
 
 </android.support.constraint.ConstraintLayout>
