--- a/app/src/main/res/layout/content_data_collection_end_game.xml
+++ b/app/src/main/res/layout/content_data_collection_end_game.xml
@@ -9,17 +9,76 @@
     tools:context=".data_collection_end_game"
     tools:showIn="@layout/activity_data_collection_end_game">
 
+    <TextView
+        android:id="@+id/end_HumanPlayerPreference_TB"
+        android:layout_width="656dp"
+        android:layout_height="108dp"
+        android:fontFamily="@font/bolt_regular"
+        android:text="Do you have a preference on where your human player is?"
+        android:textAlignment="center"
+        android:textColor="#343434"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.36" />
+
+    <CheckBox
+        android:id="@+id/endHumanPlayerStation_CB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:enabled="true"
+        android:text="Station"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.68"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.444" />
+
+    <CheckBox
+        android:id="@+id/endHumanPlayerProcessor_CB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:enabled="true"
+        android:text="Processor"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.339"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.444" />
+
+    <TextView
+        android:id="@+id/endDefence_TV"
+        android:layout_width="676dp"
+        android:layout_height="80dp"
+        android:fontFamily="@font/bolt_regular"
+        android:text="Do you prefer to play defense?"
+        android:textAlignment="center"
+        android:textColor="#343434"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.544"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.57" />
+
     <RadioGroup
         android:id="@+id/End_HumanPlayerPreference_RG"
-        android:layout_width="660dp"
+        android:layout_width="wrap_content"
         android:layout_height="73dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintHorizontal_bias="0.58"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.502">
+        app:layout_constraintVertical_bias="0.631">
 
         <RadioButton
             android:id="@+id/endDefenceYes_RB"
@@ -50,88 +109,6 @@
     </RadioGroup>
 
     <TextView
-        android:id="@+id/end_HumanPlayerPreference_TB"
-        android:layout_width="676dp"
-        android:layout_height="117dp"
-        android:fontFamily="@font/bolt_regular"
-        android:text="Do you have a preference on where your human player is?"
-        android:textColor="#000"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.524"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.418" />
-
-    <CheckBox
-        android:id="@+id/endHangShallow_CB"
-        android:layout_width="185dp"
-        android:layout_height="49dp"
-        android:text="Shallow"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.155"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.225" />
-
-    <TextView
-        android:id="@+id/End_PictureReminder_TB"
-        android:layout_width="485dp"
-        android:layout_height="83dp"
-        android:fontFamily="@font/bolt_regular"
-        android:text="Take picture of robot (Upload to Slack)"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="35sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.474"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.837" />
-
-    <RadioGroup
-        android:id="@+id/End_ConsistentHang_RG"
-        android:layout_width="685dp"
-        android:layout_height="69dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.168">
-
-        <RadioButton
-            android:id="@+id/endHangYes_RB"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:text="Yes"
-            android:textSize="45sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.108"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <RadioButton
-            android:id="@+id/endHangNo_RB"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:text="No"
-            android:textSize="45sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.645"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </RadioGroup>
-
-    <TextView
         android:id="@+id/TeleEnd_Endgame_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -141,7 +118,7 @@
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.549"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.043" />
@@ -159,117 +136,64 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.954" />
+        app:layout_constraintVertical_bias="0.949" />
 
     <TextView
         android:id="@+id/endHangLocation_TB"
-        android:layout_width="670dp"
+        android:layout_width="wrap_content"
         android:layout_height="51dp"
         android:fontFamily="@font/bolt_regular"
-        android:text="Can you Hang, If so Where?"
-        android:textColor="#000"
+        android:text="Can you Hang? If so, where?"
+        android:textColor="#343434"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.125" />
+        app:layout_constraintVertical_bias="0.169" />
 
     <CheckBox
-        android:id="@+id/endHumanPlayerStation_CB"
-        android:layout_width="200dp"
-        android:layout_height="75dp"
-        android:enabled="true"
-        android:text="Station"
-        android:textSize="45sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.157"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.617" />
-
-    <TextView
-        android:id="@+id/endDefence_TV"
-        android:layout_width="676dp"
-        android:layout_height="80dp"
-        android:fontFamily="@font/bolt_regular"
-        android:text="Do you Tend to Play Defence?"
-        android:textColor="#000"
+        android:id="@+id/endHangShallow_CB"
+        android:layout_width="wrap_content"
+        android:layout_height="71dp"
+        android:text="Shallow"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintHorizontal_bias="0.376"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.682" />
-
-    <RadioGroup
-        android:id="@+id/End_HumanPlayerPreference_RG"
-        android:layout_width="660dp"
-        android:layout_height="73dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.429"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.744">
-
-        <RadioButton
-            android:id="@+id/endDefenceYes_RB"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:text="Yes"
-            android:textSize="45sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.108"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.169" />
-
-        <RadioButton
-            android:id="@+id/endDefenseNo_RB"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:text="No"
-            android:textSize="45sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.611"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.168" />
-
-    </RadioGroup>
-
-    <CheckBox
-        android:id="@+id/endHumanPlayerProcessor_CB"
-        android:layout_width="300dp"
-        android:layout_height="55dp"
-        android:enabled="true"
-        android:text="Processor"
-        android:textSize="45sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.183"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.56" />
+        app:layout_constraintVertical_bias="0.23" />
 
     <CheckBox
         android:id="@+id/endHangDeep_CB"
-        android:layout_width="185dp"
-        android:layout_height="49dp"
+        android:layout_width="wrap_content"
+        android:layout_height="71dp"
         android:text="Deep"
-        android:textSize="34sp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintHorizontal_bias="0.648"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.264" />
+        app:layout_constraintVertical_bias="0.23" />
+
+    <TextView
+        android:id="@+id/End_PictureReminder_TB"
+        android:layout_width="485dp"
+        android:layout_height="83dp"
+        android:fontFamily="@font/bolt_regular"
+        android:text="Take picture of robot (Upload to Slack)"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.778" />
 
 
 </android.support.constraint.ConstraintLayout>
