--- a/app/src/main/res/layout/content_data_collection_end_game.xml
+++ b/app/src/main/res/layout/content_data_collection_end_game.xml
@@ -53,7 +53,7 @@
         app:layout_constraintVertical_bias="0.444" />
 
     <TextView
-        android:id="@+id/endDefence_TV"
+        android:id="@+id/endDefense_TV"
         android:layout_width="676dp"
         android:layout_height="80dp"
         android:fontFamily="@font/bolt_regular"
@@ -81,7 +81,7 @@
         app:layout_constraintVertical_bias="0.631">
 
         <RadioButton
-            android:id="@+id/endDefenceYes_RB"
+            android:id="@+id/endDefenseYes_RB"
             android:layout_width="200dp"
             android:layout_height="75dp"
             android:text="Yes"
