--- a/app/src/main/res/layout/content_data__collection_sandstorm.xml
+++ b/app/src/main/res/layout/content_data__collection_sandstorm.xml
@@ -101,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="61dp"
         android:fontFamily="@font/bolt_regular"
-        android:text="Can knock Algae off the Reef?"
+        android:text="Can you knock Algae off the Reef?"
         android:textColor="#343434"
         android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="@+id/To_EndGame_B"
@@ -275,58 +275,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.273" />
 
-    <CheckBox
-        android:id="@+id/teleopCoralReachL2_CB"
-        android:layout_width="150dp"
-        android:layout_height="66dp"
-        android:text="L2"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.342"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.351" />
-
-    <CheckBox
-        android:id="@+id/teleopCoralReachL4_CB"
-        android:layout_width="150dp"
-        android:layout_height="66dp"
-        android:text="L4"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.342"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.228" />
-
-    <CheckBox
-        android:id="@+id/teleopCoralReachL1_CB"
-        android:layout_width="150dp"
-        android:layout_height="66dp"
-        android:text="L1"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.342"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.42" />
-
-    <CheckBox
-        android:id="@+id/teleopCoralReachL3_CB"
-        android:layout_width="150dp"
-        android:layout_height="66dp"
-        android:text="L3"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.342"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.294" />
-
     <android.support.constraint.Barrier
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -375,6 +323,71 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.268" />
+
+    <RadioButton
+        android:id="@+id/radioButton"
+        android:layout_width="140dp"
+        android:layout_height="44dp"
+        android:text="L4"
+        android:textSize="38sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.336"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.221" />
+
+    <RadioButton
+        android:id="@+id/teleopCoralReachL3_RB"
+        android:layout_width="140dp"
+        android:layout_height="44dp"
+        android:text="L3"
+        android:textSize="38sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.336"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.275" />
+
+    <RadioButton
+        android:id="@+id/teleopCoralReachL2_RB"
+        android:layout_width="140dp"
+        android:layout_height="44dp"
+        android:text="L2"
+        android:textSize="38sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.336"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.326" />
+
+    <RadioButton
+        android:id="@+id/teleopCoralReachL1_RB"
+        android:layout_width="140dp"
+        android:layout_height="44dp"
+        android:text="L1"
+        android:textSize="38sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.336"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.388" />
+
+    <RadioButton
+        android:id="@+id/teleopCoralReachL4_RB"
+        android:layout_width="140dp"
+        android:layout_height="44dp"
+        android:text="L4"
+        android:textSize="38sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.336"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.221" />
 
 
 </android.support.constraint.ConstraintLayout>
